syntax = "proto3";
option java_package = "io.datanerd.generated.helloworld";
option java_multiple_files = true;

import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
          post: "/api/v1/greeter/hello"
          body: "*"
        };
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}